# invoice-processing

./: .gitignore  README.md  pyproject.toml
.github/: .copilot-instructions.md  copilot-instructions.md
activities/: __init__.py  split_pdf.py
api_bruno/: collection.bru  process_invoice.bru  startup.bru
azure-durable-functions/: README.md  function_app.py  storage_helper.py
azure_durable_functions/: .gitignore  SPEC.md  pyproject.toml
azure_durable_functions/activities/: aggregate_invoice.py  extract_invoice.py  upload_pdf.py
azure_durable_functions/api_bruno/: bruno.json  get_status.bru
azure_durable_functions/tools/: load_test.py
dapr/: README.md  SPEC.md  docker-compose.yml
dapr/http/: workflow.http
dapr/services/aggregate_service/: Dockerfile  app.py  pyproject.toml
dapr/services/extract_service/: Dockerfile  app.py  pyproject.toml
dapr/services/split_service/: Dockerfile  app.py  pyproject.toml
dapr/services/upload_service/: Dockerfile  app.py  pyproject.toml
dapr/shared/: __init__.py  models.py  pyproject.toml
dapr/workflow_app/: Dockerfile  app.py  pyproject.toml
dapr/workflow_app/workflows/: invoice.py
prefect/: README.md  SPEC.md  docker-compose.yml  pyproject.toml
prefect/src/prefect_invoice/: __init__.py  cli.py  flow.py  models.py  tasks.py
prefect/src/prefect_invoice/services/: __init__.py  aggregate_invoice.py  extract_invoice.py  helpers.py  split_pdf.py  upload_pdf.py
temporal/: .dockerignore  Dockerfile.csharp.template  Dockerfile.python.template  Dockerfile.rust.template  README.md  SPEC.md  docker-compose.yml  run_load_test.py
temporal/services/aggregate_invoice/: Dockerfile  README.md  activities.py  docker-compose.yml  pyproject.toml  worker.py
temporal/services/extract_invoice/: Dockerfile  README.md  activities.py  docker-compose.yml  pyproject.toml  worker.py
temporal/services/orchestration/: .dockerignore  Dockerfile  README.md  docker-compose.yml  invoice_workflow.py  main.py  pyproject.toml  worker.py
temporal/services/shared/: __init__.py  config.py
temporal/services/split_pdf/: Dockerfile  README.md  activities.py  docker-compose.yml  pyproject.toml  worker.py
temporal/services/upload_pdf/: .dockerignore  Dockerfile  README.md  activities.py  docker-compose.yml  pyproject.toml  worker.py
tools/: test_function.py
