[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared models for the Dapr workflow POC"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[tool.setuptools]
package-dir = {"shared" = "."}
packages = ["shared"]
