[project]
name = "upload-pdf-service"
version = "0.1.0"
description = "Upload PDF service for Temporal invoice processing"
authors = [{ name = "Author", email = "pedropcamellon@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.11.0",
    "temporalio>=1.20.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
